# hqrrp

./: .gitignore  README.md
.github/workflows/: core-linux-32.yaml  core-linux-64.yaml  core-linux.yaml
CMake/: blaspp.cmake  build_options.cmake  config.cmake  hqrrpConfig.cmake.in  lapackpp.cmake
benchmark/: CMakeLists.txt  bench_blocksizes.cpp  bench_mklvhqrrp.cpp  bench_quality.cpp  bench_three_qr_algs.cpp  experiment1.cpp  simple_test.cpp
benchmark/analysis/: analyze_exp1_intelmac.py  analyze_exp1_macmini.py  analyze_exp1_xps.py  helpers.py
benchmark/experiments/: dispatch_intelmac_exp1.sh  dispatch_macmini_accel_exp1.sh  dispatch_xps_experiment1.sh  exp1_log_intelmac_2threads.csv  exp1_log_intelmac_4threads.csv  exp1_log_macmini_accel.csv  exp1_log_xps_4threads.csv  quality.py
benchmark/experiments/quality_log/: polydecay_exp1.csv  polydecay_exp2.csv  simple.csv
include/: hqrrp.h  util.h
src/: CMakeLists.txt  hqrrp.cpp  util.cpp
test/: test_hqrrp.cpp
